# gtk-nodejs

./: Cargo.toml  README.md  build.rs  package-lock.json  package.json  test.ts
common/: Cargo.toml
common/src/: lib.rs
generation/: Cargo.toml  readme.md
generation/src/: arg_info.rs  base_info.rs  function_info.rs  lib.rs  names.rs  namespace.rs  project.rs  struct_info.rs  type_info.rs  utils.rs
generation_classic/: Cargo.toml  devfiles
generation_classic/src/: lib.rs  main.rs
introspection/: Cargo.toml
introspection/src/: bindings.rs  wrapper.h
napi/: Cargo.toml
napi/src/: wrapper.h
output/: Cargo.toml  build.rs  index.d.ts  index.js  package.json  test.darwin-arm64.node
output/src/: .gitignore  glib_native.rs  lib.rs  wrapper.h
repository/: Cargo.toml  build.rs
repository/src/: wrapper.h
src/: main.rs
