[package]
edition = "2021"
name = "gtk-nodejs"
version = "0.0.0"

#[lib]
#crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
generation = { path = "generation" }

[build-dependencies]
napi-build = "2.0.1"
bindgen = "0.65.1"
system-deps = "2.0"

[package.metadata.system-deps]
glib = { name = "glib-2.0", version = "2.80.3" }

[profile.release]
lto = true
strip = "symbols"

[workspace]
members = [
  "repository",
  "generation",
  "output"
]
