[package]
edition = "2021"
name = "output"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

[build-dependencies]
napi-build = "2.0.1"
bindgen = "0.65.1"
system-deps = "2.0"

[package.metadata.system-deps]
glib = { name = "glib-2.0", version = "2.80.3" }

[profile.release]
lto = true
strip = "symbols"
